# ts-uiua

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-uiua.h  tree-sitter-uiua.pc.in
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_uiua/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUiuaTests/: TreeSitterUiuaTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  modifiers.txt  numbers.txt  primitives.txt  strings.txt  weird.txt
